<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dg_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_custom_confirm"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/title_dialog_confirm"
                android:padding="@dimen/_10sdp"
                android:text="@string/txt_change"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_confirm_dialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/txt_old_password"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_custom"
                android:drawableLeft="@drawable/ic_lock_orange"
                android:hint="@string/txt_old_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_change" />

            <ImageView
                android:id="@+id/btn_show_hide_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="@+id/txt_old_password"
                app:layout_constraintEnd_toEndOf="@+id/txt_old_password"
                app:layout_constraintTop_toTopOf="@+id/txt_old_password"
                app:srcCompat="@drawable/ic_hide" />

            <TextView
                android:id="@+id/txtOldRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:text="@string/txtOldRequired"
                android:textColor="@color/danger"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txt_old_password"
                app:layout_constraintTop_toBottomOf="@+id/txt_old_password" />

            <EditText
                android:id="@+id/txt_new_password"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edittext_custom"
                android:drawableLeft="@drawable/ic_change"
                android:hint="@string/txt_new_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="@id/txt_old_password"
                app:layout_constraintRight_toRightOf="@id/txt_old_password"
                app:layout_constraintTop_toBottomOf="@+id/txtOldRequired" />

            <ImageView
                android:id="@+id/btn_show_hide_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="@+id/txt_new_password"
                app:layout_constraintEnd_toEndOf="@+id/txt_new_password"
                app:layout_constraintTop_toTopOf="@+id/txt_new_password"
                app:srcCompat="@drawable/ic_hide" />

            <TextView
                android:id="@+id/txtNewRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:text="@string/txtNewRequired"
                android:textColor="@color/danger"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txt_new_password"
                app:layout_constraintTop_toBottomOf="@+id/txt_new_password" />

            <EditText
                android:id="@+id/txt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/edittext_custom"
                android:drawableLeft="@drawable/ic_confirm"
                android:hint="@string/txt_confirm_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/padding"
                android:paddingRight="@dimen/padding"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="@id/txt_new_password"
                app:layout_constraintRight_toRightOf="@id/txt_new_password"
                app:layout_constraintTop_toBottomOf="@+id/txtNewRequired"
                />

            <ImageView
                android:id="@+id/btn_show_hide_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding"
                app:layout_constraintBottom_toBottomOf="@+id/txt_confirm_password"
                app:layout_constraintEnd_toEndOf="@+id/txt_confirm_password"
                app:layout_constraintTop_toTopOf="@+id/txt_confirm_password"
                app:srcCompat="@drawable/ic_hide" />



            <TextView
                android:id="@+id/txtConfirmRequired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding"
                android:text="@string/txtConfirmRequired"
                android:textColor="@color/danger"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="@+id/txt_confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/_40sdp"/>

            <TextView
                android:id="@+id/txtFailChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/txtFailChange"
                android:textColor="@color/danger"
                app:layout_constraintEnd_toEndOf="@+id/txt_confirm_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_confirm_password"
                android:visibility="invisible"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:visibility="invisible"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/button_custom_no"
            android:text="@string/btnCancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@id/dg_change_password"
            app:layout_constraintEnd_toStartOf="@id/btnChange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dg_change_password"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnChange"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:background="@drawable/button_custom_yes"
            android:text="@string/btnChange"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="@id/dg_change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toBottomOf="@id/dg_change_password"
            android:textAllCaps="false"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>