<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        tools:context=".LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="@dimen/logo_margin"
            android:src="@drawable/logo_ttc"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="5dp" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/logo_margin"
            android:background="@drawable/edittext_custom"
            android:drawableLeft="@drawable/ic_email"
            android:hint="@string/txtEmail"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/padding"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            android:layout_marginTop="@dimen/logo_margin"
            android:background="@drawable/button_custom"
            android:text="@string/btnLogin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPass" />

        <TextView
            android:id="@+id/txtMailRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:text="@string/txtMailRequired"
            android:textColor="@color/danger"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/txtEmail"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="@dimen/login_width"
            android:layout_height="@dimen/login_height"
            android:background="@drawable/edittext_custom"
            android:drawableLeft="@drawable/ic_pass"
            android:hint="@string/txtPass"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/padding"
            android:paddingRight="@dimen/padding"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMailRequired" />

        <ImageView
            android:id="@+id/btn_show_hide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding"
            app:layout_constraintBottom_toBottomOf="@+id/txtPass"
            app:layout_constraintEnd_toEndOf="@+id/txtPass"
            app:layout_constraintTop_toTopOf="@+id/txtPass"
            app:srcCompat="@drawable/ic_hide" />

        <TextView
            android:id="@+id/txtPassRequired"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:text="@string/txtPassRequired"
            android:textColor="@color/danger"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@+id/txtPass"
            app:layout_constraintTop_toBottomOf="@+id/txtPass" />

        <TextView
            android:id="@+id/txt_login_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding"
            android:textColor="@color/danger"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/txtPass"
            app:layout_constraintStart_toStartOf="@+id/txtPassRequired"
            android:layout_marginBottom="@dimen/login_height"
            android:visibility="invisible"/>
        <ProgressBar
            android:id="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
